# wlin_client

./: Application.cpp  Application.h  CMakeLists.txt  Network.cpp  Network.h  README.md  main.cpp  setting.json  최종발표.pptx
LinuxStatus/: Linuxstatus.cpp  Linuxstatus.h
StatusJSON/: LsJson.cpp  LsJson.h
json/: name.json  req_sig.json  request.json  status.json
